--- a/Templates/_default/PostDetails.html
+++ b/Templates/_default/PostDetails.html
@@ -18,7 +18,7 @@
    <span class="month">[Post:PublishedOnDate|MMM]</span>
    <span class="day">[Post:PublishedOnDate|dd]</span>
    <span class="year">[Post:PublishedOnDate|yyyy]</span>
-[if|1][Post:published][=]False[/if]
+[if|1][Post:publishedandvisible][=]False[/if]
   <span class="unpublished">
    <i class="fa fa-warning" title="[resx:Unpublished]"></i>
   </span>
